fixed center alignment

--- a/finding-android1/stylesheets/style.css
+++ b/finding-android1/stylesheets/style.css
@@ -1,7 +1,4 @@
 @import url(http://fonts.googleapis.com/css?family=Orbitron:700);
-
-body {
-}
 h1{
   text-align: center;
   font-family: "Orbitron", Arial, serif;
@@ -62,36 +59,41 @@ p{
   left: 658px;
   z-index:1;
 }
+.next_level_button{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 .bglevel1{
-  width: 50%;
-  height: 631px;
+  width: 736px;
+  height: 616px;
   margin: 0 auto;
   background-image: url("http://www.pragmaticmom.com/wp-content/uploads/2014/05/map.jpg");
   background-repeat: no-repeat;
 }
 .bglevel2{
-  width: 85%;
-  height: 1232px;
+  width: 1024px;
+  height: 768px;
   margin: 0 auto;
   background-image: url("https://c1.staticflickr.com/5/4153/5094259179_8590d66c59_b.jpg");
   background-repeat: no-repeat;
 }
 .bglevel3{
-  width: 50%;
-  height: 1000px;
+  width: 1920px;
+  height: 1080px;
   margin: 0 auto;
   background-image: url("http://marketurbanism.com/wp-content/uploads/2014/07/Tokyo.jpg");
   background-repeat: no-repeat;
 }
 .bglevel4{
-  width: 50%;
+  width: 2123px;
   height: 1000px;
   margin: 0 auto;
   background-image: url("http://blog.artandstory.com/wp-content/uploads/2011/06/spread01-washdc_crop.jpg");
   background-repeat: no-repeat;
 }
 .bglevel5{
-  width: 50%;
+  width: 1280px;
   height: 1000px;
   margin: 0 auto;
   background-image: url("http://arzoenterprises.com/new-site/wp-content/uploads/2014/07/3356624308_53fdd5dde3_o.jpg");
